[project]
name = "clock-canvas-youtube-audio"
version = "0.1.0"
description = "Desktop clock canvas with draggable widgets and YouTube audio stack"
requires-python = ">=3.11"
dependencies = [
  "pyside6>=6.7.0",
  "yt-dlp>=2025.1.0",
  "python-vlc>=3.0.0",
  "pyinstaller>=6.18.0",
]

[tool.uv]
package = false
